kubernetes/userservice/userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    letschess.service: userservice
  name: userservice
  namespace: letschess
spec:
  replicas: 1
  selector:
    matchLabels:
      letschess.service: userservice
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        letschess.service: userservice
    spec:
      containers:
      - image: sacation/letschess-userservice:latest
        imagePullPolicy: Always
        name: letschess-userservice
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          limits:
            memory: "1024Mi"
            # cpu: "1500m"
      hostname: userservice
      restartPolicy: Always
