kubernetes/userservice/userservice-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    letschess.service: userservice-db
  name: userservice-db
  namespace: letschess
spec:
  type: ClusterIP
  ports:
  - name: "userservice-db"
    protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    letschess.service: userservice-db
