kubernetes/userservice/userservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    letschess.service: userservice
  name: userservice
  namespace: letschess
spec:
  type: ClusterIP
  ports:
  - name: "http"
    port: 6001
    targetPort: 80
  - name: "https"
    port: 6002
    targetPort: 443
  selector:
    letschess.service: userservice
