kubernetes/userservice/userservice-ingress-routes.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userserviceingressroutes
spec:
  hosts:
  - "*"
  gateways:
  - letschess-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 6001
        host: userservice
